homarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: homarr-service
spec:
  selector:
    app: homarr
  ports:
    - protocol: TCP
      port: 7575
      targetPort: 7575
